java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateElement2.pass
/*
 * CreateElement2.java
 *
 * Created on March 21, 2005, 10:21 PM
 *
 * To change this template, choose Tools | Options and locate the template under
 * the Source Creation and Management node. Right-click the template and choose
 * Open. You can then make changes to the template in the Source Editor.
 */

package org.netbeans.test.java.hints;

/**
 *
 */
public class CreateElement2 {
    
    /** Creates a new instance of CreateElement2 */
    public CreateElement2() {
    }
    
    public static final void main(String[] args) {
        new CreateElement2().test("", "", 12);
    }

    private void test(String string, String string0, int i) {
        throw new UnsupportedOperationException("Not yet implemented");
    }

}
